--- a/calculator-styles.css
+++ b/calculator-styles.css
@@ -18,20 +18,16 @@
   margin: 5px;
   padding: 5px;
 }
-.buttons div {
+.button-row {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 button {
-  box-sizing: border-box;
   cursor: pointer;
   font-size: 20px;
   height: 55px;
   margin: 3px;
   width: 100%;
-}
-.fifth-row {
-  display: flex;
 }
 #number-0 {
   flex-shrink: 0.68;
