--- a/calculator-styles.css
+++ b/calculator-styles.css
@@ -3,9 +3,9 @@
   box-sizing: border-box;
 }
 .calculator {
-  border: 2px solid #000000;
+  border: 2px solid violet;
   border-radius: 10px;
-  background-color: #000000 ;
+  background-color: violet ;
   margin: 10px auto;
   padding: 5px;
   width: 300px;
@@ -41,7 +41,7 @@ button {
   overflow-x:auto;
 }
 .first-row button{
-  background-color: #E67E22;
+  background-color: gray;
   border-width: thin;
   color: #FFFFFF ;
 }
